<resources>

    <string name="app_name">Canvas_123321</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="set_background_fill">Background Fill</string>
    <string name="camera">Camera</string>
    <string name="search_picture">Search Image</string>
    <string name="open_image_storage">Open Image Storage</string>
    <string name="camera_popUp">Camera</string>
    <string name="search_image_popUp">Search Image</string>
    <string name="image_storage_popUP">Image Storage</string>
    <string name="background_fill_popUp">Background Fill</string>
    <string name="preview">Preview</string>
    <string name="set_pouring">Set pouring</string>
    <string name="ffffffff">#FFFFFFFF</string>
    <string name="circle_text_draw">данное приложение предназначено для рисования</string>
    <string name="input_search_text">Input search text</string>
    <string name="get_random_image">Get Image</string>
    <string name="input_image_keyword">Input Image Keyword</string>
    <string name="enable">Enable</string>
    <string name="set_draw">Set Draw</string>
    <string name="not_input_text">Not input text</string>

</resources>