<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:id="@+id/popupLayout"
    tools:context=".presentation.PopUpFragment">

    <Button
        android:id="@+id/btnPreview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preview"
        android:layout_margin="5dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSetBackgroundFill"
        app:layout_constraintEnd_toEndOf="@+id/btnSetBackgroundFill"
        app:layout_constraintStart_toStartOf="@+id/btnSetBackgroundFill"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnSetBackgroundFill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/set_pouring"
        app:layout_constraintTop_toBottomOf="@+id/btnPreview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etSetColor" />

    <EditText
        android:id="@+id/etSetColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:hint="@string/ffffffff"
        android:layout_margin="5dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnSetBackgroundFill"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnSetBackgroundFill" />


</androidx.constraintlayout.widget.ConstraintLayout>