<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ImageSearchActivity">

    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <Button
        android:id="@+id/btnGetImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_random_image"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/ivImage"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/ivImage"
        app:layout_constraintTop_toBottomOf="@+id/ivImage" />

    <EditText
        android:id="@+id/etWordForSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/input_search_text"
        android:imeOptions="actionSearch"
        android:importantForAutofill="yes"
        app:layout_constraintEnd_toEndOf="@+id/btnGetImage"
        app:layout_constraintStart_toStartOf="@+id/btnGetImage"
        app:layout_constraintTop_toBottomOf="@+id/btnGetImage" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enable"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnGetImage"
        app:layout_constraintEnd_toStartOf="@+id/btnGetImage"
        app:layout_constraintTop_toBottomOf="@+id/ivImage" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/ivImage"
        app:layout_constraintEnd_toEndOf="@+id/ivImage"
        app:layout_constraintStart_toStartOf="@+id/ivImage"
        app:layout_constraintTop_toTopOf="@+id/ivImage" />

    <Button
        android:id="@+id/btnSetBackgroundImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_draw"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/btnGetImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnGetImage"
        app:layout_constraintTop_toBottomOf="@+id/ivImage" />

</androidx.constraintlayout.widget.ConstraintLayout>